# just-another-coding-agent

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md  go.mod  go.sum  hatch_build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/jaca/: console_nonwindows.go  console_windows.go  main.go  main_test.go
cmd/jaca-read-only-worker/: main.go  main_test.go  read_nofollow_unix.go  read_nofollow_windows.go
docs/: README.md  architecture.md  chatgpt-subscription-oauth-spike.md  code-mode.md  compaction.md  contracts.md  development.md  distribution.md  dspy-pydanticai-bridge.md  goal.md  grounding.md  harbor-terminal-bench.md  mcp.md  mental-model.md  open-source-launch-checklist.md  permission-execution.md  permission-rule-engine.md  read-only-worker.md  stateful-orchestration.md  tbench-slice-analysis.md  terminal-bench-journal.md  tui-architecture-plan.md  tui.md  work-graph.md  workspace-trust.md
docs/adr/: 0001-use-pydanticai-as-engine.md  0002-headless-coding-agent-is-the-product.md  0003-canonical-session-and-rpc-contract.md  0004-canonical-package-layout.md  0005-preserve-pi-product-behavior-not-architecture.md  0006-internal-execution-helpers-must-not-own-tool-semantics.md
docs/interview-prep/: 00-visual-maps.md  01-design-order.md  02-control-plane-and-policy.md  03-execution-and-trust-boundaries.md  04-state-sessions-and-recovery.md  05-identity-api-and-observability.md  06-interview-drills.md  07-oauth-authentication-flow.md  08-security-primitives-in-jaca.md  09-api-design-in-jaca.md  10-workspace-deps-and-runtime-context.md  11-automata-theory-and-state-machines-in-jaca.md  README.md
docs/learning/: subagent-terminal-bench-eval-set.md  terminal-bench-checklist.md
evaluations/: __init__.py  model_probe.py
evaluations/bench/: __init__.py  exec_prompt.py
evaluations/harbor/: agent.py  commands.py  install-just-another-coding-agent.sh.j2  probe_in_run_compaction.py  subagent_eval_set.txt
evaluations/scripts/: analyze_slice_history.py  build_tb2_submission_tree.py  docker_env.sh  logfire_env.sh  logfire_smoke.py  probe_model_support.py  run_tb2_submission.sh  run_tb2_submission_glm5.sh  run_tb2_submission_glm5_slice.sh  run_tb2_submission_slice.sh  tb2_glm5.sh  tb2_gpt54_chatgpt.sh  tb2_submission.sh  update_tbench_dashboard.sh  validate_tb2_bundle.py  validate_tb2_submission_tree.py
evaluations/swebench/: __init__.py  batch.py  cli.py  dataset.py  prompt.py  runner.py
evaluations/watchdog/: __init__.py  evaluators.py
experiments/read_only_worker/: bench.py  python_subprocess_worker.py
scripts/: debug_rpc_once.py  repro_pydantic_ai_capture_run_messages_ctxvar.py  run_tb2_submission_glm5.sh  run_tb2_submission_glm5_slice.sh  smoke_uv_tool_install.py  tb2_glm5.sh  verify_bundled_wheel.py  verify_release_artifacts.py
src/just_another_coding_agent/: __init__.py  __main__.py  _hatch_build.py  _pdeathsig.py  auth.py  config.py  go_binaries.py  go_tui.py  install_repair.py  mcp_oauth.py  oauth_github_copilot.py  oauth_openai_codex.py  oauth_store.py  onboarding.py  provider_readiness.py  secret_store.py  workspace_storage.py
src/pi_code_agent/: __init__.py  __main__.py
src/pi_code_agent_adapters/: __init__.py
tasks/: a.txt  b.txt  c.txt
tests/: read_only_worker_test_support.py  reference_read_only_worker.py  session_test_helpers.py  test_package.py
tests/adapters/: test_exec_prompt.py  test_harbor_commands.py  test_harbor_install_script.py  test_submission_glm5_launcher.py  test_submission_glm5_slice_launcher.py  test_tb2_glm5_harness.py
tests/contracts/: read_only_tool_test_support.py  rpc_stdio_test_support.py  test_activity_metadata.py  test_agent_builder.py  test_auth_store.py  test_bash_tool.py  test_code_mode_bridge.py  test_code_mode_contract.py  test_code_mode_service.py  test_code_mode_tools.py  test_code_mode_workflow.py  test_compaction_constants.py  test_config.py  (+61 more)
(+235 files in other folders)
