[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "just-another-coding-agent"
version = "0.1.0"
description = "Python-native headless coding-agent backend built around PydanticAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic-ai-slim[anthropic,mcp,openai]>=1.71.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[project.scripts]
just-another-coding-agent = "just_another_coding_agent.__main__:main"
just-another-coding-agent-exec-prompt = "just_another_coding_agent_adapters.bench.exec_prompt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/just_another_coding_agent", "src/just_another_coding_agent_adapters"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
