[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "just-another-coding-agent"
version = "0.1.2"
description = "Python-native headless coding-agent backend built around PydanticAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "logfire>=4.31.0",
  "pydantic-ai-slim[anthropic,mcp,openai,retries]>=1.71.0,<2.0",
  "pydantic-evals>=1.73.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
trace = []

[project.scripts]
jaca = "just_another_coding_agent.__main__:main"
just-another-coding-agent = "just_another_coding_agent.__main__:main"
just-another-coding-agent-exec-prompt = "evaluations.bench.exec_prompt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/just_another_coding_agent", "evaluations"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "src/just_another_coding_agent/_hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
