[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "just-another-coding-agent"
version = "0.1.19"
description = "Terminal coding agent with a PydanticAI backend and first-party Go TUI"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Topic :: Software Development",
]
dependencies = [
  "keyring>=25.6.0",
  "logfire>=4.31.0",
  "packaging>=24.0",
  "pydantic-ai-slim[anthropic,google,mcp,openai,openrouter,retries]>=1.71.0,<2.0",
  "pydantic-evals>=1.73.0,<2.0",
  "tiktoken>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/SahilDahiya/just-another-coding-agent"
Repository = "https://github.com/SahilDahiya/just-another-coding-agent"
Issues = "https://github.com/SahilDahiya/just-another-coding-agent/issues"

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
  "vulture>=2.16",
]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]
trace = []
eval-swebench = [
  "datasets>=2.14.0",
]

[project.scripts]
jaca = "just_another_coding_agent.__main__:main"
just-another-coding-agent = "just_another_coding_agent.__main__:main"
just-another-coding-agent-exec-prompt = "evaluations.bench.exec_prompt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/just_another_coding_agent", "evaluations"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "src/just_another_coding_agent/_hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.vulture]
paths = ["src", "evaluations"]
min_confidence = 80
